--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "umi dev",
     "clean": "rimraf lib/",
-    "build": "gulp"
+    "build": "gulp",
+    "dist": "react-scripts build"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
@@ -23,7 +24,8 @@
     "lodash": "^4.17.19",
     "mini-css-extract-plugin": "^1.3.9",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "@umijs/preset-react": "^1.5.12",
